@@ -20,6 +20,7 @@ AllOverIt
   * Added commandline argument helper to escape strings
   * Added IComparer extension methods Reverse() and Then(); the latter allowing them to be composed like Chain of Responsibility
   * Updated mapping to support ArrayList
+  * Added object extension GetObjectElements()
 
 AllOverIt.AutoFixture
   * Updated AutoFixture v4.18.0
